codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__empty.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                                                                                                    "
"› Ask Codex to do anything                                                                          "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"  ? 快捷键                                                                         剩余上下文 100%  " Hidden by multi-width symbols: [(5, " "), (7, " "), (9, " "), (84, " "), (86, " "), (88, " "), (90, " "), (92, " ")]
